--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@my-workspace/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx serve bakery-ops",
+    "build": "nx build bakery-ops"
+  },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^10.0.2",
